--- a/css/custom.css
+++ b/css/custom.css
@@ -40,3 +40,11 @@ form {
 #spinner {
     display: none;
 }
+
+.error{
+    border-bottom-color: red !important;
+}
+
+.success{
+    border-bottom-color: green !important;
+}
